[package]
name = "postmill"
version = "0.2.8"
authors = ["Foss <foss@riseup.net>"]
edition = "2018"
description = "API for interfacing with Postmill forums"
license = "GPL-3.0"
documentation = "https://docs.rs/postmill"
repository = "https://git.sr.ht/~foss/postmill"

[dependencies]
reqwest = "0.9"
select = "0.4"
url = "1.7"
cookie = "0.11"
chrono = "0.4"

[[bin]]
name = "main"
path = "src/main.rs"
